fix a bug where the long city names overflowed

--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,6 @@ body {
   font-size: 1.8rem;
   margin: 0 !important;
   width: 100%;
-  height: 4rem;
   display: flex;
   align-items: center; }
 
