--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -173,7 +173,6 @@
     font-size: 1.8rem;
     margin: 0 !important;
     width: 100%;
-    height: 4rem;
     display: flex;
     align-items: center;
   }
